rgw: get elastic search info in start_sync, avoid creating new coroutines manager

Fixes: https://tracker.ceph.com/issues/43199

Signed-off-by: Chang Liu <liuchang0812@gmail.com>